--- a/style.css
+++ b/style.css
@@ -46,22 +46,27 @@ header .carousel-inner .item{
     bottom: 50px;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 768px) {
    .heading {
        font-size: 20px;
    }
    .pera-text {
        font-size: 10px;
    }
-
+   .carousel-caption{
+       bottom:0px;
+   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 414px) {
     .heading {
         font-size: 15px;
     }
     .pera-text {
         font-size: 9px;
     }
+    .carousel-caption{
+        bottom:0px;
+}
  
  }
 /*-------- carousal start --------*/
