--- a/style.css
+++ b/style.css
@@ -56,17 +56,23 @@ header .carousel-inner .item{
    .carousel-caption{
        bottom:0px;
    }
+    .about-2 {
+        bottom: 50px;
+    }
 }
 @media only screen and (max-width: 414px) {
-    .heading {
+    .heading{
         font-size: 15px;
     }
-    .pera-text {
+    .pera-text{
         font-size: 9px;
     }
     .carousel-caption{
         bottom:0px;
 }
+ .about-2{
+     bottom: 50px;
+ }
  
  }
 /*-------- carousal start --------*/
@@ -74,14 +80,14 @@ header .carousel-inner .item{
 /*-------- about start --------*/
 /*-------- about start --------*/
 .about{
-    margin-top: 20px;
+    top: 20px;
     /* background-image: url(./img/bg/bg1.jpg);
     background-repeat: no-repeat; */
     background-color: #1a1a1a;
 
   }
   .about-2{
-  padding-top:200px;
+  padding-top:150px;
 }
   
   .about_text{
